# generic-web-routes

./: LICENSE  generic-web-routes.cabal
src/Generic/Routes/: Base.hs  Show.hs
