Name:                generic-web-routes
Version:             0.1
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy)

-- A short (one-line) description of the package.
Synopsis:            Generic web routes

-- A longer description of the package.
-- Description:         

-- URL for the project homepage or repository.
Homepage:            https://github.com/fusion5/generic-web-routes/
License:             BSD3
License-file:        LICENSE
Author:              Dragos Ionita
Maintainer:          dragos.0x55@gmail.com
Category:            Web
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  Ghc-Options: -Wall
  Hs-source-dirs: src
  -- Modules exported by the library.
  Exposed-modules:     
    Generic.Routes.Base
    Generic.Routes.Show
  
  -- Packages needed in order to build this package.
  Build-depends:       
        base >= 3.0
    ,   instant-generics >= 0.3.3
    ,   uri-encode >= 1.3.4
    ,   parsec >= 3.1.1
    
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
